--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,27 @@
 </head>
 <body>
   
-  <nav class="top-bar">
-    <h1><a href="/">Vetted</a></h1>
+  <div class="nav">
 
-    <section class="top-bar-section">
+    <div class="nav-left">
       <ul class="right">
         <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <li><%= link_to 'Create An Account', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
       </ul>
-    </section>
-  </nav>
+    </div>
+
+    <div class="nav-center">
+      <%= image_tag("logo.svg", :class => "") %>
+     </div>
+
+    <div class="nav-right">
+      <h3><a class="button" href='/submissions/new'>Add New Resource</a></h3>
+    </div>
+  </div>
 
   <%- flash.each do |key, value| -%>
     <div class="flash flash-<%= key %>">
